--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -11,10 +11,12 @@
     <div class="flex-this space-between">
         <div><h2 class="no-top-margin">Engagement Notice</h2></div>
         <div class="flex-this flex-end">
-            <div class="margin-right-16 otc-dropdown">
-                <button class="primary-btn action-btn">Options</button>
-                <div class="otc-dropdown-content">
-                    <a id="addURLBtn" class="primary-btn blue-btn">Add Link <i class="fa-solid fa-circle-plus"></i></a>
+            <div class="margin-right-16 circle-dropdown">
+                <div style="padding-bottom:8px;">
+                    <i class="round-btn fa-regular fa-ellipsis"></i>
+                </div>
+                <div class="circle-dropdown-content">
+                    <a id="addURLBtn" class="primary-btn">Add Link <i class="fa-regular fa-link-simple"></i></a>
                     {% if otc_download_perm == 1 %}
                         <a 
                             {% if researcher %}
@@ -23,16 +25,16 @@
                             {% if institution %}
                                 href="{% url 'download-open-to-collaborate-notice-institution' perm=otc_download_perm institution_id=institution.id %}" 
                             {% endif %}
-                            class="primary-btn blue-btn">
-                            Download Notice <i class="fa-solid fa-download"></i>
+                            class="primary-btn">
+                            Download Notice <i class="fa-regular fa-arrow-down-to-line"></i>
                         </a>
                         {% if urls %}
-                            <a id="shareBtn" class="primary-btn blue-btn">Share Notice <i class="fa-solid fa-share-nodes"></i></a>
+                            <a id="shareBtn" class="primary-btn">Share Notice <i class="fa-solid fa-share-nodes"></i></a>
                         {% else %}
                             <a id="addURLBtn" class="primary-btn disabled-btn" title="Add a link in order to share the Notice.">Share <i class="fa-solid fa-share-nodes"></i></a>
                         {% endif %}
                     {% else %}
-                        <a class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to download this Notice.{% endif %}{% endif %}{% if is_sandbox %}Download of Notices is not available on the sandbox site.{% endif %}">Download Notice <i class="fa-solid fa-download"></i></a>
+                        <a class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to download this Notice.{% endif %}{% endif %}{% if is_sandbox %}Download of Notices is not available on the sandbox site.{% endif %}">Download Notice <i class="fa-regular fa-arrow-down-to-line"></i></a>
                         <a id="addURLBtn" class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to share this Notice.{% endif %}{% endif %}{% if is_sandbox %}Sharing of Notices is not available on the sandbox site.{% endif %}">Share <i class="fa-solid fa-share-nodes"></i></a>
                     {% endif %}
                 </div>
