--- a/templates/projects/projects.html
+++ b/templates/projects/projects.html
@@ -21,21 +21,15 @@
                 <div class="flex-this align-center">
                     <a
                        {% if create_restricted_message %}
-                           class="primary-btn white-btn margin-top-2 block a-disabled"
+                           class="primary-btn green-btn margin-top-2 block a-disabled"
+                           title="{{ create_restricted_message }}"
                        {% else %}
                            class="primary-btn green-btn margin-top-2"
+                           href="{% url 'researcher-create-project' researcher.id %}"
                        {% endif %}
 
-                       href="{% url 'researcher-create-project' researcher.id %}"
                     >
                         Create a Project <i class="fa fa-arrow-right"></i>
-                        {% if create_restricted_message %}
-                            <div class="tooltip" style="margin-bottom: 3px; margin-left: 5px;"><strong>i</strong>
-                                <span class="tooltiptext">
-                                    {{ create_restricted_message }}
-                                </span>
-                            </div>
-                        {% endif %}
                     </a>
                 </div>
             {% endif %}
