--- a/templates/account_settings_pages/_api-keys.html
+++ b/templates/account_settings_pages/_api-keys.html
@@ -1,6 +1,6 @@
-{% extends 'settings-base.html' %}{% load static %}
+{% extends 'account-settings-base.html' %}{% load static %}
 
-{% block settings %}
+{% block account_settings %}
 <div class="flex-this column w-80 border-left margin-right-1">
     <div class="flex-this space-between">
         <div><h3 class="no-top-margin">API Key Manager</h3></div>
