--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -8,13 +8,13 @@
 </div>
 
 <div class="content-card content-card-space white-bg">
+
     <div class="flex-this space-between">
         <div><h2 class="no-top-margin">Engagement Notice</h2></div>
+
         <div class="flex-this flex-end">
             <div class="margin-right-16 circle-dropdown">
-                <div style="padding-bottom:8px;">
-                    <i class="round-btn fa-regular fa-ellipsis"></i>
-                </div>
+                <i class="pointer fa-solid fa-circle-ellipsis fa-3x"></i>
                 <div class="circle-dropdown-content">
                     <a id="addURLBtn" class="primary-btn">Add Link <i class="fa-regular fa-link-simple"></i></a>
                     {% if otc_download_perm == 1 %}
@@ -35,12 +35,14 @@
                         {% endif %}
                     {% else %}
                         <a class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to download this Notice.{% endif %}{% endif %}{% if is_sandbox %}Download of Notices is not available on the sandbox site.{% endif %}">Download Notice <i class="fa-regular fa-arrow-down-to-line"></i></a>
-                        <a id="addURLBtn" class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to share this Notice.{% endif %}{% endif %}{% if is_sandbox %}Sharing of Notices is not available on the sandbox site.{% endif %}">Share <i class="fa-solid fa-share-nodes"></i></a>
+                        <a class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to share this Notice.{% endif %}{% endif %}{% if is_sandbox %}Sharing of Notices is not available on the sandbox site.{% endif %}">Share <i class="fa-solid fa-share-nodes"></i></a>
                     {% endif %}
                 </div>
             </div>
         </div>
+
     </div>
+
     <div class="flex-this">
         <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/ci-open-to-collaborate.png' %}" width="119px" alt="Open to Collaborate Notice icon. Black square with the top right corner folded and two white hands reaching toward each other from top to bottom over a white horizontal rectangle."></div>
         <div class="flex-this column margin-left-16">
