--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -425,24 +425,21 @@ button[disabled],
 /* Hover over text for disabled buttons */
 .btn-help-text {
     display: block;
+    position: absolute;
     margin-top: 8px;
+    padding: 8px 16px;
+    border-radius: 4px;
     font-size: 14px;
     color: #fff;
     visibility: hidden;
-}
-
-.btn-with-helptext button {
-    position: relative;
-}
-.btn-help-text {
-    position: absolute;
-    right: 295px;
+    right: 5px;
     z-index: 1;
     width: 250px;
     background-color: #EF6C00;
-    padding: 8px 16px;
-    font-size: 14px;
-    border-radius: 4px;
+}
+
+.btn-with-helptext {
+    position: relative;
 }
 
 .btn-with-helptext:hover .btn-help-text {
