feat: modified button class used when disabled

--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -110,7 +110,7 @@
                 <div class="flex-this align-center">
                     <a
                         {% if create_restricted_message %}
-                            class="primary-btn green-btn margin-top-2 block a-disabled"
+                            class="primary-btn margin-top-2 block disabled-btn"
                             title="{{ create_restricted_message }}"
                         {% else %}
                             class="primary-btn green-btn margin-top-2"
