--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -431,7 +431,7 @@
                                 <div class="margin-right-8">
                                     <a
                                         {% if create_restricted_message %}
-                                            class="a-disabled primary-btn white-btn"
+                                            class="disabled-btn primary-btn white-btn"
                                             title="{{ create_restricted_message }}"
                                         {% else %}
                                             class="primary-btn white-btn"
