Corrected invite role

--- a/templates/accounts/member-invitations.html
+++ b/templates/accounts/member-invitations.html
@@ -50,7 +50,7 @@
                                         <i>
                                             {% if invite.role == 'viewer' %} Viewer {% endif %}
                                             {% if invite.role == 'editor' %} Editor {% endif %}
-                                            {% if invite.role == 'Admin' %} Administrator {% endif %}
+                                            {% if invite.role == 'admin' %} Administrator {% endif %}
                                         </i>
                                         <br>
 
