--- a/templates/account_settings_pages/_api-keys.html
+++ b/templates/account_settings_pages/_api-keys.html
@@ -1,98 +1,97 @@
 {% extends 'account-settings-base.html' %}{% load static %}
 
 {% block account_settings %}
-<div class="flex-this column w-80 border-left margin-right-1">
-    <div class="flex-this space-between">
-        <div><h3 class="no-top-margin">API Key Manager</h3></div>
-    </div>
+<div class="flex-this space-between">
+    <div><h3 class="no-top-margin">API Key Manager</h3></div>
+</div>
+<p class="no-top-margin">Your API key enables access to the Local Contexts Hub data via the API and must be kept secret. For more information see our <a class="default-a" href="https://localcontexts.org/api-guide/" target="_blank">API Guide</a>.</p>
 
-    {% if has_key %}
-        <div class="w-70 margin-bottom-2">
-            <p class="no-top-margin">Your API key enables access to the Local Contexts Hub data via the API and must be kept secret. For more information see our <a class="default-a" href="https://localcontexts.org/api-guide/" target="_blank">API Guide</a>.
-            <p class="no-top-margin">Your API key is listed below.</p>
-        </div>
+{% if institution_keys %}
+    {% for name, key in institution_keys %}    
+        <p>Name: {{name}}, Key: {{key}}</p>
+    {% endfor %}
+{% elif not institution_keys %}
+    <p class="no-top-margin">You do not have an API key. Click the button below to generate one.</p>
+{% endif %}
 
-        <div class="w-100 margin-top-8">
-            <div class="flex-this">
-                <div style="width:55%;">
-                    <label for="api_key">API Key</label><br>                                           
-                    <div id="keyText" class="key">{{ api_key }}</div>
-                    {% if keyvisible %}
-                        <form id="apiKeyGeneratorForm" method="POST">
-                            {% csrf_token %}
-                            <button class="primary-btn green-btn copied-display" id="copybtn" name="copybtn" onclick="copyKey()">
-                                <i class="fa fa-copy"></i>
-                            </button>
-                        </form>
-                    {% else %}
-                        <button class="primary-btn green-btn copied-display" id="copybtn" name="copybtn" disabled>
-                            <i class="fa fa-copy"></i>
-                        </button>
-                    {% endif %}
-                    
-                </div>
-            </div>
-            <div style="width:55%;">
-                <form id="apiKeyGeneratorForm" method="POST">
-                    {% csrf_token %}
-                    {% if keyvisible %}
-                        <button type="submit" class="primary-btn action-btn margin-top-2" id="showHideBtn" name="hidebtn">Hide Key</button>
-                    {% else %}
-                        <button type="submit" class="primary-btn action-btn margin-top-2" id="showHideBtn" name="showbtn">Show Key</button>
-                        <div class="messageFloat">{% include 'partials/_alerts.html' %}</div>
-                    {% endif %}
-                </form>
-            </div>
-        </div>
-
-        <div class="flex-this column w-100 margin-right-1">
-            <div><h4 class="margin-top-16">Delete API Key</h4></div>
-    
-            <div class="w-70 margin-bottom-2">
-                <p class="no-top-margin">You can only have one API key at a time. If you need to generate a new one, you must delete this one first. To delete your current key, click the button below.</p>
-                    <button id="submitKeyDeletion" class="primary-btn white-btn" onclick="deleteKey()">Delete API Key</button>
-            </div>
-        </div>
-    
-        <div id="deleteKeyModal" class="modal hide">
-    
-            <div class="modal-defaults deactivate-modal flex-this column w-100">
-                <div class="w-100">
-        
-                    <div>
-                        <h2 class="primary-black-text no-top-margin">Are you sure?</h2>  
-                        <p>Are you sure you want to delete your API key? <br><br>
-                            This cannot be undone and any projects connected to this key will be disconnected. <br></p>  
-                    </div>
-                    <div class="flex-this w-100 text-align-center">
-                        <form id="apiDeleteKeyForm" method="POST">
-                            {% csrf_token %}
-                            <button name="continueKeyDeleteBtn" class="primary-btn white-btn">Yes, delete this key</button>    
-                        </form>
-                        <div id="closeModal" class="margin-left-1 primary-btn action-btn">Cancel</div>
-                    </div>
-        
-                </div>
-            </div>
-        </div>
-    {% else %}
-        <div>
-            <form id="apiKeyGeneratorForm" method="POST">
-                {% csrf_token %}
-
-                <div class="w-70 margin-bottom-2">
-                    <p class="no-top-margin">Your API key enables access to the Local Contexts Hub data via the API and must be kept secret. For more information see our <a class="default-a" href="https://localcontexts.org/api-guide/" target="_blank">API Guide</a>.</p>
-                    <p class="no-top-margin">You do not have an API key. Click the button below to generate one.</p>
-                    <button type="submit" class="primary-btn action-btn margin-top-2" name="generatebtn">Generate API Key <i class="fa fa-arrow-right"></i></button>
-                </div>
-            </form>
-        </div>
-        {% include 'partials/_alerts.html' %}
-    {% endif %}
-
+<div>
+    <button id="generateAPIKeybtn" class="primary-btn action-btn margin-top-2">Add API Key <i class="fa fa-arrow-right"></i></button>
 </div>
 
-<style>
+<!-- {% if has_key %}
+    <div class="w-70 margin-bottom-2">
+        <p class="no-top-margin">Your API key enables access to the Local Contexts Hub data via the API and must be kept secret. For more information see our <a class="default-a" href="https://localcontexts.org/api-guide/" target="_blank">API Guide</a>.
+        <p class="no-top-margin">Your API key is listed below.</p>
+    </div>
+
+    <div class="w-100 margin-top-8">
+        <div class="flex-this">
+            <div style="width:55%;">
+                <label for="api_key">API Key</label><br>                                           
+                <div id="keyText" class="key">{{ api_key }}</div>
+                {% if keyvisible %}
+                    <form id="apiKeyGeneratorForm" method="POST">
+                        {% csrf_token %}
+                        <button class="primary-btn green-btn copied-display" id="copybtn" name="copybtn" onclick="copyKey()">
+                            <i class="fa fa-copy"></i>
+                        </button>
+                    </form>
+                {% else %}
+                    <button class="primary-btn green-btn copied-display" id="copybtn" name="copybtn" disabled>
+                        <i class="fa fa-copy"></i>
+                    </button>
+                {% endif %}
+                
+            </div>
+        </div>
+        <div style="width:55%;">
+            <form id="apiKeyGeneratorForm" method="POST">
+                {% csrf_token %}
+                {% if keyvisible %}
+                    <button type="submit" class="primary-btn action-btn margin-top-2" id="showHideBtn" name="hidebtn">Hide Key</button>
+                {% else %}
+                    <button type="submit" class="primary-btn action-btn margin-top-2" id="showHideBtn" name="showbtn">Show Key</button>
+                    <div class="messageFloat">{% include 'partials/_alerts.html' %}</div>
+                {% endif %}
+            </form>
+        </div>
+    </div>
+
+    <div class="flex-this column w-100 margin-right-1">
+        <div><h4 class="margin-top-16">Delete API Key</h4></div>
+
+        <div class="w-70 margin-bottom-2">
+            <p class="no-top-margin">You can only have one API key at a time. If you need to generate a new one, you must delete this one first. To delete your current key, click the button below.</p>
+                <button id="submitKeyDeletion" class="primary-btn white-btn" onclick="deleteKey()">Delete API Key</button>
+        </div>
+    </div>
+
+    <div id="deleteKeyModal" class="modal hide">
+
+        <div class="modal-defaults deactivate-modal flex-this column w-100">
+            <div class="w-100">
+    
+                <div>
+                    <h2 class="primary-black-text no-top-margin">Are you sure?</h2>  
+                    <p>Are you sure you want to delete your API key? <br><br>
+                        This cannot be undone and any projects connected to this key will be disconnected. <br></p>  
+                </div>
+                <div class="flex-this w-100 text-align-center">
+                    <form id="apiDeleteKeyForm" method="POST">
+                        {% csrf_token %}
+                        <button name="continueKeyDeleteBtn" class="primary-btn white-btn">Yes, delete this key</button>    
+                    </form>
+                    <div id="closeModal" class="margin-left-1 primary-btn action-btn">Cancel</div>
+                </div>
+    
+            </div>
+        </div>
+    </div>
+{% else %} -->
+    
+<!-- {% endif %} -->
+
+<!-- <style>
     .key{
         max-height: 40px;
         min-height: 40px;
@@ -124,6 +123,48 @@
     #showHideBtn{
         float: right;
     }
-</style>
+</style> -->
 
+<div id="generateAPIKeymodal" class="modal hide">
+
+    <div class="modal-defaults share-modal flex-this column w-100">
+
+        <div class="flex-this space-between">
+            <div class="flex-this">
+                <h2 class="primary-black-text no-top-margin">Generate an API Key</h2>
+            </div>
+            <div>
+                <div id='closegenerateAPIKeymodal' class="close-modal-btn pointer"><i class="fa-regular fa-xmark fa-xl"></i></div>
+            </div>            
+        </div>
+
+        <div class="w-100">
+            <div>
+                <p class="no-top-margin">Please add a name that will be associated with this API Key. This cannot be edited later.</p>
+            </div>
+
+            <form id="apiKeyGeneratorForm" method="POST">
+            {% csrf_token %}
+
+            <div class="flex-this column w-100">
+                <div class="margin-top-8">
+                    <label> Application Name </label><br>
+                    {{ form.name }}
+                    {% if form.name.errors %}
+                        <div class="msg-red w-50"><small>{{ form.name.errors.as_text }}</small></div>
+                    {% endif %}
+                </div>
+            </div>
+
+            <div class="flex-this space-between w-100">
+                <div class="margin-top-8">
+                    <button type="submit" class="primary-btn action-btn margin-top-2" name="generatebtn">Generate API Key <i class="fa fa-arrow-right"></i></button>
+                </div>                    
+            </div>
+
+        </form>
+
+        </div>
+    </div>
+</div>
 {% endblock %}
