content update for OTC notice embed: elongation back into Open To Collaborate

--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -548,7 +548,7 @@
                     <button class="copy-btn btn-in-input" data-target="profilePageUrlToCopy">Copy URL</button>
                 </div>
 
-                <label class="bold margin-top-8 no-bottom-margin block">Embed OTC Notice</label>
+                <label class="bold margin-top-8 no-bottom-margin block">Embed Open to Collaborate Notice</label>
                 <p class="font-size-14 no-top-margin margin-bottom-8">Add this Notice to your website by copying the code below.</p>
 
                 <div class="text-input-to-copy">
