Solved issues with the api-keys handling

--- a/templates/account_settings_pages/_api-keys.html
+++ b/templates/account_settings_pages/_api-keys.html
@@ -4,6 +4,7 @@
 <div class="flex-this space-between">
     <div><h3 class="no-top-margin">API Key Manager</h3></div>
 </div>
+{% include 'partials/_alerts.html' %}
 <p class="no-top-margin">Your API key enables access to the Local Contexts Hub data via the API and must be kept secret. For more information see our <a class="default-a" href="https://localcontexts.org/api-guide/" target="_blank">API Guide</a>.</p>
 
 {% if institution_keys %}
