--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -688,18 +688,23 @@
                     {% if institution.is_approved %}
                         {% if member_role == 'admin' or member_role == 'editor' %}
                             <a 
-                                class="block pointer" 
-                                onclick="openModal('notifyCommunitiesModal', 'closeNotifyModal')"
-                            ><i class="fa-solid fa-user-group"></i> Notify Communities</a>
+                                class="block pointer {% if subscription.notification_count == 0 %} a-disabled {% endif %}" 
+                                {% if subscription.notification_count != 0 %}
+                                    onclick="openModal('notifyCommunitiesModal', 'closeNotifyModal')"
+                                {% endif %}
+                                ><i class="fa-solid fa-user-group"></i> Notify Communities
+                                {% if subscription.notification_count == 0 %}
+                                <div class="tooltip" style="margin-top: 6px; margin-left: 5px;"><strong>i</strong>
+                                    <span class="tooltiptext">
+                                        Your institution has reached its notification limit. Please upgrade your subscription plan to notify more communities.
+                                    </span>
+                                </div> 
+                                {% endif %}
+                            </a>
                         {% endif %}
                     {% else %}
                         <a class="block a-disabled"> 
                             <i class="fa-solid fa-user-group"></i> Notify Communities
-                            <div class="tooltip" style="margin-top: 6px; margin-left: 5px;"><strong>i</strong>
-                                <span class="tooltiptext">
-                                    Your account needs to be confirmed before you can notify communities. Please contact us if you have questions.
-                                </span>
-                            </div> 
                         </a>
                     {% endif %}
                 {% endif %}
@@ -1058,7 +1063,10 @@
                             Notify relevant communities about this Project to add them as a potential contributor. 
                             Notified communities can decide if they would like to add their Labels to the Project. 
                             Notified communities will also be able to see and edit Project details, see and add Project comments, and see Project activity.
-                        </p>  
+                        </p> 
+                        <p class="margin-bottom-2">
+                            The remaining count of your notification is <strong>{{subscription.notification_count}}</strong>.
+                        </p> 
                     </div>
 
                     {% if communities %}
@@ -1154,3 +1162,7 @@
     </div>
 </div>
 {% endif %}
+
+<script>
+    var notification_count = {{ subscription.notification_count }};
+</script>
