--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -28,7 +28,7 @@
           {% firstof researcher.user.get_full_name researcher.user.username %}
         </h3>
           {% if researcher and researcher.is_subscribed %}
-            <i class="fa fa-check subscribed-icon"></i>
+            <i class="fa fa-check subscribed-icon" title="Is Subscribed"></i>
           {% endif %}
       </div>
       <div>
@@ -50,10 +50,10 @@
         {% if '/registry/' in request.path %}
             <div>
                 <div class="margin-bottom-16">
-                    <a 
+                    <a
                         class="primary-btn action-btn"
-                        href="{% url 'public-researcher' researcher.id %}"                    
-                    >View public page</a>                        
+                        href="{% url 'public-researcher' researcher.id %}"
+                    >View public page</a>
                 </div>
                 {% if researcher.otc_researcher_url.all %}
                     <div class="flex-this flex-end">
@@ -89,7 +89,7 @@
                   class="round-btn-small darkteal-text primary-btn white-btn"
                   ><i class="no-margin fa fa-cog" aria-hidden="true"></i
                 ></a>
-              </div>          
+              </div>
           </div>
         {% endif %}
       </div>
