feat: change mouseover text

--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -28,7 +28,7 @@
           {% firstof researcher.user.get_full_name researcher.user.username %}
         </h3>
           {% if researcher and researcher.is_subscribed %}
-            <i class="fa fa-check subscribed-icon" title="Is Subscribed"></i>
+            <i class="fa fa-check subscribed-icon" title="Subscribed"></i>
           {% endif %}
       </div>
       <div>
